[package]
name = "usage-logger"
version = "0.1.0"
edition = "2024"

[features]
default = []
nominal = ["dep:nominal-streaming", "dep:tokio", "dep:reqwest"]

[dependencies]
sysinfo = "0.33"
macsmc = "0.1"
battery = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo"] }
ctrlc = "3"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
nominal-streaming = { version = "0.7", optional = true }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
